--- a/src/css/_common.scss
+++ b/src/css/_common.scss
@@ -1,11 +1,24 @@
 body {
     background-color: #f2f2f2;
-  }
-  
-  .w-100 {
-    width: 100%;
-  }
+}
 
-  .mb-1{
-      margin-bottom: 16px;
-  }
+.w-100 {
+    width: 100%;
+}
+
+.mb-1 {
+    margin-bottom: 16px;
+}
+
+.bd-1 {
+    border: 1px solid;
+}
+
+.pos-feedback-s {
+    position: absolute;
+    top: 5px;
+    z-index: 2;
+    display: block;
+    right: 9px;
+    cursor: pointer;
+}
